add new portfolio

--- a/wachid.tex
+++ b/wachid.tex
@@ -100,7 +100,7 @@
   % You can add your own with \printinfo{symbol}{detail}
   \email{wachid@outlook.com}
   \phone{0852-2544-0150}
-  \location{Bali, Indonesia}
+  \location{Batang, Central Java, Indonesia}
   \homepage{wach.id}
   % \twitter{@wach_1}
   \linkedin{nur-wachid}
@@ -140,7 +140,7 @@
 
 \cvsection{Experience}
 
-\cvevent{Head of Software Engineering}{PT. Lingkar Kreasi Teknologi}{November 2022 -- Ongoing}{Tangerang, Indonesia}
+\cvevent{Head of Software Engineering}{PT. Lingkar Kreasi Teknologi}{Nov 2022- Ongoing}{Tangerang, Indonesia}
 
 \begin{itemize}
 \item Successfully led a team of developers, fostering a collaborative and high-performing environment that resulted in a 20\% increase in overall team productivity.
@@ -156,7 +156,7 @@
 
 \divider
 
-\cvevent{VP devOps Engineer}{PT. Lingkar Kreasi}{November 2019 - Augustus 2022}{Bandung, Indonesia}
+\cvevent{VP DevOps Engineer}{PT. Lingkar Kreasi}{Nov 2019-Aug 2022}{Bandung, Indonesia}
 \begin{itemize}
 \item Designed and implemented a fully automated deployment pipeline, reducing deployment time from days to minutes, and ensuring consistent and error-free deployments.
 
@@ -171,7 +171,7 @@
 
 \divider
 
-\cvevent{Backend Developer}{PT. Rakhasa Artha Wisesa}{February 2021 - November 2022}{Jakarta Barat, Indonesia}
+\cvevent{Backend Developer}{PT. Rakhasa Artha Wisesa}{Feb 2021 - Nov 2022}{Jakarta Barat, Indonesia}
 
 \begin{itemize}
 \item Improved database query performance, reducing query execution times by 40\% and enhancing overall application responsiveness.
@@ -184,7 +184,7 @@
 \end{itemize}
 
 
-\cvevent{Project Lead Developer}{PT. Lingkar Kreasi}{November 2018 - November 2019}{Bandung, Indonesia}
+\cvevent{Project Lead Developer}{PT. Lingkar Kreasi}{Nov 2018-Nov 2019} {Bandung, Indonesia}
 
 \begin{itemize}
 \item Led cross-functional teams to consistently deliver projects on time and within budget, achieving a 95\% on-time project completion rate.
@@ -198,7 +198,7 @@
 \item Implemented effective scope management practices, resulting in a 25\% reduction in project scope creep and improved project predictability.
 \end{itemize}
 
-\cvevent{Web Developer}{PT. Danadipa Central Niaga}{November 2017 - November 2018}{Yogyakarta, Indonesia}
+\cvevent{Web Developer}{PT. Danadipa Central Niaga}{Nov 2017-Nov 2018}{Yogyakarta, Indonesia}
 
 \begin{itemize}
 \item Successfully developing and launching large-scale websites for clients or companies
@@ -225,13 +225,13 @@
 % Some ad-hoc tweaking to adjust the labels so that they don't overlap
 % \hspace*{-1em}  %% quick hack to move the wheelchart a bit left
 % \wheelchart{1.5cm}{0.5cm}{%
-  % 10/13em/accent!30/Sleeping \& dreaming about work,
-  % 25/9em/accent!60/Public resolving issues with Yahoo!\ investors,
-  % 5/11em/accent!10/\footnotesize\\[1ex]New York \& San Francisco Ballet Jawbone board member,
-  % 20/11em/accent!40/Spending time with family,
-  % 5/8em/accent!20/\footnotesize Business development for Yahoo!\ after the Verizon acquisition,
-  % 30/9em/accent/Showing Yahoo!\ \mbox{employees} that their work has meaning,
-  % 5/8em/accent!20/Baking cupcakes
+%   10/13em/accent!30/Sleeping \& dreaming about work,
+%   25/9em/accent!60/Public resolving issues with Yahoo!\ investors,
+%   5/11em/accent!10/\footnotesize\\[1ex]New York \& San Francisco Ballet Jawbone board member,
+%   20/11em/accent!40/Spending time with family,
+%   5/8em/accent!20/\footnotesize Business development for Yahoo!\ after the Verizon acquisition,
+%   30/9em/accent/Showing Yahoo!\ \mbox{employees} that their work has meaning,
+%   5/8em/accent!20/Baking cupcakes
 % }
 
 % use ONLY \newpage if you want to force a page break for
@@ -272,7 +272,15 @@
 
 \cvsection{Portfolios}
 
-\cvachievement{\faThumbsUp}{Laravel Likeable}{Laravel Likeable simplify management of Eloquent model's likes \& dislikes. Make any model likeable \& dislikeable in a minute!}
+\cvachievement{\faAmericanSignLanguageInterpreting}{Private package PHP}{A repository Website for PHP packages. It's a central hub where developers can discover, share, and install reusable PHP code}
+
+\divider
+
+\cvachievement{\faEdge}{Nextsuite}{A base theme React for neo project}
+
+\divider
+
+\cvachievement{\faThumbsUp}{Laravel Likeable}{Laravel Likeable simplify management of Eloquent model's likes \& dislikes. Make any model likeable \& dislikeable in a minute}
 
 \divider
 
@@ -293,10 +301,9 @@
 \cvsection{Strengths}
 
 \cvtag{Hard-working (18/24)}
-\cvtag{PHP}\\
-\cvtag{Javascript}
-\cvtag{MySQL}
-
+\cvtag{PHP} \cvtag{Python} \cvtag{Golang}\\
+\cvtag{Javascript} \cvtag{Vue Js} \cvtag{ReactJs}
+\cvtag{MySQL} \cvtag{PostgreSQL}
 \divider\smallskip
 
 \cvtag{DevOps}
